--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>video</title>
   </head>
   <body>
-    <video src="Untitled.mp4"></video>
+    <video src="./Untitled.mp4"></video>
   </body>
 </html>
