--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>video</title>
   </head>
   <body>
-    <video src="./Untitled.mp4"></video>
+   <video
+  src="./Untitled.mp4"
+  muted=""
+  autoplay=""
+  loop=""
+  playsinline=""
+  class="fv-video"
+></video>
   </body>
 </html>
